# THI_laboratory5_1

THI_laboratory5_1-main/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  sec_window.cpp  sec_window.h  sec_window.ui
THI_laboratory5_1-main/tests/: test_musiclib.cpp
